--- a/src/app/Utilities_Pages/LRI/lri-edit/lri-edit.component.html
+++ b/src/app/Utilities_Pages/LRI/lri-edit/lri-edit.component.html
@@ -5,6 +5,12 @@
   <mat-card class="mat-elevation-z8">
     <br>
     <div class="row">
+      <div class="col-12">
+        <h4>Edit LRI for {{LRIElement.LRIDate|date:'fullDate'}}</h4>
+      </div>
+    </div>
+    <br>
+    <div class="row">
       <div class="col-lg-6">
         <mat-form-field appearance="outline" class="mainInputBox">
           <mat-label>Client</mat-label>
