--- a/src/app/Utilities_Pages/LRI/lri-new/lri-new.component.html
+++ b/src/app/Utilities_Pages/LRI/lri-new/lri-new.component.html
@@ -4,6 +4,9 @@
 
 <div class="container">
   <mat-card class="mat-elevation-z8">
+      <br>
+      <h4>Create LRI</h4>
+      <br>
     <!-- File URL start-->
     <div>
       <button mat-stroked-button (click)="fileInput.click()" matTooltip="Upload from file" [matTooltipShowDelay]="800"
