--- a/src/app/Utilities_Pages/whitemail/whitemail-new/whitemail-new.component.html
+++ b/src/app/Utilities_Pages/whitemail/whitemail-new/whitemail-new.component.html
@@ -2,6 +2,9 @@
 <br>
 <div class="container">
   <mat-card class="mat-elevation-z8">
+    <br>
+    <h4>Create Whitemail</h4>
+    <br>
     <ul>
       <li *ngFor="let element of whitemailArr">
         <div class="row">
