--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -26,13 +26,11 @@
               <li class="nav-item dropdown mainNavItem">
         <button id="navbarDropdown" class="btn navbarDropdownBtn navbarBtn nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilities</button>
         <div class="dropdown-menu navbarDropdownMenu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" (click)="NavigateToWhitemail()">Client Whitemail</a>
-          <a class="dropdown-item" (click)="NavigateToNewWhitemail()">Add Whitemail</a>
-          <a class="dropdown-item" (click)="NavigateToLRI()">Client LRI</a>
-          <a class="dropdown-item" (click)="NavigateToNewLRI()">Add LRI</a>
-          <a class="dropdown-item" (click)="NavigateToIncidentals()">Client Incidentals</a>
-          <a class="dropdown-item" (click)="NavigateToNewIncidentals()">Add Incidentals</a>
-          <a class="dropdown-item" (click)="NavigateToNewCaging()">Add Caging</a>
+          <a class="dropdown-item" (click)="NavigateToWhitemail()">Whitemail Management</a>
+          <a class="dropdown-item" (click)="NavigateToNewWhitemail()">New Whitemail</a>
+          <a class="dropdown-item" (click)="NavigateToLRI()">LRI Management</a>
+          <a class="dropdown-item" (click)="NavigateToNewLRI()">New LRI</a>
+          <a class="dropdown-item" (click)="NavigateToNewCaging()">New Caging</a>
           <a class="dropdown-item" (click)="NavigateToCagingCalendar()">Caging Calendar</a>
           <a class="dropdown-item" (click)="NavigateToExceptions()">Caging Exceptions</a>
           <a class="dropdown-item" (click)="NavigateToPDFUpload()">Manage Package PDFs</a>
