--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.html
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.html
@@ -40,24 +40,100 @@
             <button mat-flat-button class="defaultButton" id="rightTravelBtn" (click)="nextBtn()">
               <i class="material-icons">chevron_right</i>
             </button>
-            <button mat-flat-button class="defaultButton" id="timeResetBtn" *ngIf="timeSelection == 'Year'" (click)="returnDefault()">{{lockedYear}}</button>
-            <button mat-flat-button class="defaultButton" id="timeResetBtn" *ngIf="timeSelection == 'Month'" (click)="returnDefault()">{{convertMonthName(lockedMonth)}},
-              {{lockedYear}}</button>
-            <ng-container *ngIf="timeSelection == 'Day'">
-              <mat-form-field>
-                <input matInput id="dayBtn" [matDatepicker]="picker" placeholder="" #pickerDate (dateChange)="selectAnyDate(pickerDate)">
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-              <button mat-flat-button class="defaultButton" id="timeResetBtn" (click)="picker.open()">Pick Date</button>
+            <ng-container *ngIf="timeSelection == 'Year'">
+              <div class="timeSelectionDiv" *ngIf="monthDrill == false">
+                <button mat-button [matMenuTriggerFor]="YearMenu" #YearMenuTrigger="matMenuTrigger" class="defaultButton"
+                  (menuOpened)="createYearSelection()">Select
+                  Date</button>
+                <mat-menu #YearMenu="matMenu">
+                  <div class="container">
+                    <div class="row justify-content-end">
+                      <div class="col-5">
+                        <button mat-flat-button class="yearTravelBtn" id="leftTravelBtn" (click)="[generatePastYears(), $event.stopPropagation()]">
+                          <i class="material-icons">chevron_left</i>
+                        </button>
+                        <button mat-flat-button class="yearTravelBtn" id="rightTravelBtn" (click)="[generateFutureYears(), $event.stopPropagation()]">
+                          <i class="material-icons">chevron_right</i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-4" *ngFor="let item of yearArr">
+                        <button mat-menu-item class="buttonArray" (click)="selectYearDrop(item)">{{item}}</button>
+                      </div>
+                    </div>
+                  </div>
+                </mat-menu>
+              </div>
             </ng-container>
+            <!-- <button mat-flat-button class="defaultButton" id="timeResetBtn" *ngIf="timeSelection == 'Year'" (click)="returnDefault()">{{lockedYear}}</button> -->
+            <!--MONTH SELECTION -->
+            <ng-container *ngIf="timeSelection == 'Month'">
+              <div class="timeSelectionDiv" *ngIf="monthDrill == false">
+                <button mat-button [matMenuTriggerFor]="YearMenu" #YearMenuTrigger="matMenuTrigger" class="defaultButton"
+                  (menuOpened)="createYearSelection()">Select
+                  Date</button>
+                <mat-menu #YearMenu="matMenu">
+                  <div class="container">
+                    <div class="row justify-content-end">
+                      <div class="col-5">
+                        <button mat-flat-button class="yearTravelBtn" id="leftTravelBtn" (click)="[generatePastYears(), $event.stopPropagation()]">
+                          <i class="material-icons">chevron_left</i>
+                        </button>
+                        <button mat-flat-button class="yearTravelBtn" id="rightTravelBtn" (click)="[generateFutureYears(), $event.stopPropagation()]">
+                          <i class="material-icons">chevron_right</i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-4" *ngFor="let item of yearArr">
+                        <button mat-menu-item class="buttonArray" (click)="selectYearDrop(item)">{{item}}</button>
+                      </div>
+                    </div>
+                  </div>
+                </mat-menu>
+              </div>
+              <div class="timeSelectionDiv" [hidden]="monthDrill == false">
+                <button mat-button [matMenuTriggerFor]="MonthMenu" #MonthMenuTrigger="matMenuTrigger" class="defaultButton">Select
+                  Date</button>
+                <mat-menu #MonthMenu="matMenu" (close)="monthMenuClosed()">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-6" *ngFor="let item of monthSelectArr">
+                        <button mat-menu-item class="buttonArray" (click)="selectMonthDrop(item)">{{convertMonthName(item)}}</button>
+                      </div>
+                    </div>
+                  </div>
+                </mat-menu>
+              </div>
+            </ng-container>
+            <!-- <button mat-flat-button class="defaultButton" id="timeResetBtn" *ngIf="timeSelection == 'Month'" (click)="returnDefault()">{{convertMonthName(lockedMonth)}},
+              {{lockedYear}}</button> -->
+            <div class="timeSelectionDiv" *ngIf="timeSelection == 'Day'">
+              <ng-container>
+                <mat-form-field>
+                  <input matInput id="dayBtn" [matDatepicker]="picker" placeholder="" #pickerDate (dateChange)="selectAnyDate(pickerDate)">
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <button mat-flat-button class="defaultButton" id="timeResetBtn" (click)="picker.open()">Select Date</button>
+              </ng-container>
+            </div>
           </div>
           <div class="col-md-4" id="timeHeader">
             <h3 *ngIf="timeSelection == 'Year'">{{yvYear}}</h3>
             <h3 *ngIf="timeSelection == 'Month'">{{mvMonth}} {{mvYear}}</h3>
             <h3 *ngIf="timeSelection == 'Day'">{{dvMonth}} {{dvDay}}, {{dvYear}}</h3>
           </div>
+
+
+
+
+
+
+
+
           <div class="col-md-4">
-            <div style="float:right;">
+            <div style="float:right;" [ngClass]="loading? 'loading' : 'loaded'">
               <mat-button-toggle-group class="timeSelectionGroup" #group="matButtonToggleGroup" (change)="onTabChange(group.value)"
                 [value]="timeSelection">
                 <mat-button-toggle value="Year" (click)="switchToYear()">Year</mat-button-toggle>
@@ -546,7 +622,7 @@
                   <th mat-header-cell *matHeaderCellDef>Non-Donors</th>
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
-                      <input required type="number" matInput [(ngModel)]="cageElement.NonDonors">
+                      <input required type="number" matInput [value]="cageElement.NonDonors" #NonDonorInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.NonDonors|number}}</span>
                   </td>
@@ -556,7 +632,7 @@
                   <th mat-header-cell *matHeaderCellDef>Cash Donations</th>
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
-                      <input required type="number" matInput [(ngModel)]="cageElement.CashCount">
+                      <input required type="number" matInput [value]="cageElement.CashCount" #CashCountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CashCount|number}}</span>
                   </td>
@@ -567,7 +643,9 @@
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
                       <span>$</span>
-                      <input required type="number" matInput [ngModel]="cageElement.CashAmount|number:'1.2-2'" (blur)="updateValue(cageElement, $event, 'Cash')">
+                      <!-- (blur)="updateValue(cageElement, $event, 'Cash')" -->
+                      <input required type="number" matInput [value]="cageElement.CashAmount|number:'1.2-2'"
+                        #CashAmountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CashAmount|currency:'USD':'symbol':'1.2-2'}}</span>
                   </td>
@@ -577,7 +655,7 @@
                   <th mat-header-cell *matHeaderCellDef>Card Donations</th>
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
-                      <input required type="number" matInput [(ngModel)]="cageElement.CardCount">
+                      <input required type="number" matInput [value]="cageElement.CardCount" #CardCountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CardCount|number}}</span>
                   </td>
@@ -588,7 +666,8 @@
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
                       <span>$</span>
-                      <input required type="number" matInput [ngModel]="cageElement.CardAmount" (blur)="updateValue(cageElement, $event, 'Card')">
+                      <!-- (blur)="updateValue(cageElement, $event, 'Card')" -->
+                      <input required type="number" matInput [value]="cageElement.CardAmount" #CardAmountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CardAmount|currency:'USD':'symbol':'1.2-2'}}</span>
                   </td>
@@ -598,7 +677,7 @@
                   <th mat-header-cell *matHeaderCellDef>Check Donations</th>
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
-                      <input required type="number" matInput [(ngModel)]="cageElement.CheckCount">
+                      <input required type="number" matInput [value]="cageElement.CheckCount" #CheckCountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CheckCount|number}}</span>
                   </td>
@@ -609,7 +688,9 @@
                   <td mat-cell *matCellDef="let cageElement">
                     <div *ngIf="cageElement.editing == true" class="elementInput">
                       <span>$</span>
-                      <input required type="number" matInput [ngModel]="cageElement.CheckAmount|number:'1.2-2'" (blur)="updateValue(cageElement, $event, 'Check')">
+                      <!-- (blur)="updateValue(cageElement, $event, 'Check')" -->
+                      <input required type="number" matInput [value]="cageElement.CheckAmount|number:'1.2-2'"
+                        #CheckAmountInput class="form-control">
                     </div>
                     <span *ngIf="cageElement.editing == false">{{cageElement.CheckAmount|currency:'USD':'symbol':'1.2-2'}}</span>
                   </td>
@@ -705,11 +786,11 @@
 
 
 <div id="modalBackground" *ngIf="showDeleteModal">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <mat-card class="mat-elevation-z8 deleteModalCard">
-            <div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <mat-card class="mat-elevation-z8 deleteModalCard">
+          <div>
             <div class="row">
               <div class="col-6 offset-3">
                 <i class="material-icons">error_outline</i>
@@ -730,8 +811,8 @@
               </div>
             </div>
           </div>
-          </mat-card>
-        </div>
+        </mat-card>
       </div>
     </div>
   </div>
+</div>
