--- a/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
+++ b/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
@@ -3,62 +3,73 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">
-      <mat-form-field appearance="outline" class="mainInputBox">
-          <mat-label>Client</mat-label>
-        <input type="text" aria-label="Number" matInput [formControl]="myControl"
-          [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let client of filteredClientList | async" [value]="client" (click)="mainSelectClient(client)">
-            {{client}}
-          </mat-option>
-        </mat-autocomplete>
-        <mat-icon matSuffix class="dropdownIcon">arrow_drop_down</mat-icon>
-      </mat-form-field>
-      <br>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-12" *ngIf="!displayTable">
-      <mat-card class="mat-elevation-z8 emptyTableMessage">
-        <h5>Please Select a client</h5>
-      </mat-card>
-    </div>
     <div class="col-11">
-      <table mat-table *ngIf="displayTable" class="mat-elevation-z8" [dataSource]="this.rootLRI">
-        <ng-container matColumnDef="SelectionBox">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">
-            <mat-checkbox (click)="checkSelected(element, $event)" (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
-              class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox>
-          </td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-        <ng-container matColumnDef="Date">
-          <th mat-header-cell *matHeaderCellDef title="LRI Date"> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.LRIDate|date:'fullDate'}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Description">
-          <th mat-header-cell *matHeaderCellDef> Description </th>
-          <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Amount">
-          <th mat-header-cell *matHeaderCellDef title="LRI entry amount"> Amount </th>
-          <td mat-cell *matCellDef="let element"> {{element.Amount|currency:'USD':'symbol':'1.2-2'}} </td>
-        </ng-container>
-        <ng-container matColumnDef="ButtonControl">
-          <th mat-header-cell *matHeaderCellDef class="ButtonControlCell"> </th>
-          <td mat-cell *matCellDef="let element" class="ButtonControlCell">
-            <button mat-icon-button *ngIf="element.showEditButton" (click)="navigateToEdit(element)"><i class="material-icons">edit</i></button>
-          </td>
-        </ng-container>
+      <mat-card class="mat-elevation-z8">
+        <br>
+        <h4>LRI Management<span *ngIf="Client != null"> for {{Client}}</span></h4>
+        <br>
+        <div class="row">
+          <div class="col-lg-6">
+            <mat-form-field appearance="outline" class="mainInputBox">
+              <mat-label>Client</mat-label>
+              <input type="text" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let client of filteredClientList | async" [value]="client" (click)="mainSelectClient(client)">
+                  {{client}}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-icon matSuffix class="dropdownIcon">arrow_drop_down</mat-icon>
+            </mat-form-field>
+            <br>
+          </div>
+        </div>
 
 
-        <tr mat-header-row *matHeaderRowDef="MainDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" (mouseenter)="hoverRow(row)" (mouseleave)="hoverLeave(row)"></tr>
-      </table>
+        <div class="row">
+          <div class="col-12" *ngIf="displayTable == false">
+            <h5 id="clientSelectionMessage">Please Select a client</h5>
+          </div>
+          <div class="col-12" *ngIf="showEmptyMessage == true">
+            <br>
+            <h5 id="clientSelectionMessage">Client does not have LRI</h5>
+          </div>
+          <div style="width:100%; height: 4px;">
+            <mat-progress-bar color="accent" mode="indeterminate" *ngIf="tableLoading == true"></mat-progress-bar>
+          </div>
+          <table mat-table *ngIf="displayTable" [dataSource]="this.rootLRI">
+            <ng-container matColumnDef="SelectionBox">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <mat-checkbox (click)="checkSelected(element, $event)" (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
+                  class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+            </ng-container>
+            <ng-container matColumnDef="Date">
+              <th mat-header-cell *matHeaderCellDef title="LRI Date"> Date </th>
+              <td mat-cell *matCellDef="let element"> {{element.LRIDate|date:'fullDate'}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Description">
+              <th mat-header-cell *matHeaderCellDef> Description </th>
+              <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Amount">
+              <th mat-header-cell *matHeaderCellDef title="LRI entry amount"> Amount </th>
+              <td mat-cell *matCellDef="let element"> {{element.Amount|currency:'USD':'symbol':'1.2-2'}} </td>
+            </ng-container>
+            <ng-container matColumnDef="ButtonControl">
+              <th mat-header-cell *matHeaderCellDef class="ButtonControlCell"> </th>
+              <td mat-cell *matCellDef="let element" class="ButtonControlCell">
+                <button mat-icon-button *ngIf="element.showEditButton" (click)="navigateToEdit(element)"><i class="material-icons">edit</i></button>
+              </td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="MainDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" (mouseenter)="hoverRow(row)" (mouseleave)="hoverLeave(row)"></tr>
+          </table>
+        </div>
+      </mat-card>
     </div>
 
     <div class="col-1" *ngIf="displayTable">
@@ -91,26 +102,26 @@
       <div class="col-md-6 offset-md-3">
         <mat-card class="mat-elevation-z8 deleteModalCard">
           <div>
-          <div class="row">
-            <div class="col-6 offset-3">
-              <i class="material-icons">error_outline</i>
+            <div class="row">
+              <div class="col-6 offset-3">
+                <i class="material-icons">error_outline</i>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-10 offset-1">
+                <span id="deleteMessage1">Are you sure?</span>
+              </div>
+              <div class="col-10 offset-1">
+                <span>Do you really want to delete {{deleteNotation}}? This process cannot be undone.</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 btnContainer">
+                <button mat-raised-button class="mat-elevation-z2" id="cancelBtn" (click)="preDelete($event)">Cancel</button>
+                <button mat-raised-button class="mat-elevation-z4" id="deleteBtn" (click)="delete()">Delete</button>
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-10 offset-1">
-              <span id="deleteMessage1">Are you sure?</span>
-            </div>
-            <div class="col-10 offset-1">
-              <span>Do you really want to delete {{deleteNotation}}? This process cannot be undone.</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 btnContainer">
-              <button mat-raised-button class="mat-elevation-z2" id="cancelBtn" (click)="preDelete($event)">Cancel</button>
-              <button mat-raised-button class="mat-elevation-z4" id="deleteBtn" (click)="delete()">Delete</button>
-            </div>
-          </div>
-        </div>
         </mat-card>
       </div>
     </div>
